MDEV-4819 Upgrade from MySQL 5.6 does not work